--- a/personal.html
+++ b/personal.html
@@ -697,6 +697,7 @@
             <span class="footer-privacy__year">2023г. Все права защищены</span>
         </div>
     </footer>
+    <script src="https://unpkg.com/imask"></script>
     <script src="./assets/js/personal-page.js"></script>
     <script src="./assets/js/second-script.js"></script>
 </body>
