--- a/post.html
+++ b/post.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link rel="shortcut icon" href="./assets/icon/favicon.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"> -->
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./style.css">
     <title>Корпорация Дезинфекции</title>
 </head>
@@ -312,7 +308,6 @@
                             <span class="post-content__wrap__data__article__item__first">Время прочтения</span>
                             <span class="post-content__wrap__data__article__item__second color-grey">5 минут</span>
                         </div>
-                        <!-- <span class="post-content__wrap__data__article__item__foto-data">Фотография: Unsplash.com</span> -->
                     </article>
                 </div>
                 <div class="post-content__wrap__content">
@@ -819,13 +814,8 @@
             <span class="footer-privacy__year">2023г. Все права защищены</span>
         </div>
     </footer>
-    <!-- <script
-    src="https://code.jquery.com/jquery-3.7.0.min.js"
-    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-    crossorigin="anonymous">
-    </script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/imask"></script>
     <script src="./assets/js/post-page.js"></script>
     <script src="./assets/js/second-script.js"></script>
 </body>
