--- a/services.html
+++ b/services.html
@@ -6,16 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link rel="shortcut icon" href="./assets/icon/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
-    />
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <link rel="stylesheet" href="./style.css">
     <title>Корпорация Дезинфекции</title>
 </head>
@@ -402,60 +394,6 @@
                             </tr>
                             <tr>
                                 <td>от 3 001 кв.м. и более</td>
-                                <td>договорная</td>
-                                <td>договорная</td>
-                                <td>договорная</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <table class="price-list__table-wrap__item__table-mobil">
-                        <thead>
-                            <tr>
-                                <td>Площадь обработки</td>
-                                <td>Обработка 1 раз</td>
-                                <td>1 раз в квартал</td>
-                                <td>1 раз в месяц</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>< 50 м2</td>
-                                <td>от 1600 ₽ м2</td>
-                                <td>от 1600 ₽ м2</td>
-                                <td>от 1600 ₽ м2</td>
-                            </tr>
-                            <tr>
-                                <td>51-100 м2</td>
-                                <td>от 3600 ₽ м2</td>
-                                <td>от 3600 ₽ м2</td>
-                                <td>от 3600 ₽ м2</td>
-                            </tr>
-                            <tr>
-                                <td>101-300 м2</td>
-                                <td>от 30 ₽ м2</td>
-                                <td>от 30 ₽ м2</td>
-                                <td>от 30 ₽ м2</td>
-                            </tr>
-                            <tr>
-                                <td>301-1000 м2</td>
-                                <td>от 17 ₽ м2</td>
-                                <td>от 17 ₽ м2</td>
-                                <td>от 17 ₽ м2</td>
-                            </tr>
-                            <tr>
-                                <td>1001-2000 м2</td>
-                                <td>от 14 ₽ м2</td>
-                                <td>от 14 ₽ м2</td>
-                                <td>от 14 ₽ м2</td>
-                            </tr>
-                            <tr>
-                                <td>2001-3000 м2</td>
-                                <td>от 12 ₽ м2</td>
-                                <td>от 12 ₽ м2</td>
-                                <td>от 12 ₽ м2</td>
-                            </tr>
-                            <tr>
-                                <td>> 3000 м2</td>
                                 <td>договорная</td>
                                 <td>договорная</td>
                                 <td>договорная</td>
@@ -890,8 +828,8 @@
                 </div>
                 <div class="video-reports__foto-slider__next">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
-                        <rect x="0.75" y="0.75" width="38.5" height="58.5" rx="1.25" stroke="#C3C3C3" stroke-width="1.5"/>
-                        <path d="M11 29.25C10.5858 29.25 10.25 29.5858 10.25 30C10.25 30.4142 10.5858 30.75 11 30.75V29.25ZM29.5303 30.5303C29.8232 30.2374 29.8232 29.7626 29.5303 29.4697L24.7574 24.6967C24.4645 24.4038 23.9896 24.4038 23.6967 24.6967C23.4038 24.9896 23.4038 25.4645 23.6967 25.7574L27.9393 30L23.6967 34.2426C23.4038 34.5355 23.4038 35.0104 23.6967 35.3033C23.9896 35.5962 24.4645 35.5962 24.7574 35.3033L29.5303 30.5303ZM11 30.75H29V29.25H11V30.75Z" fill="#C4C4C4"/>
+                        <rect x="0.75" y="0.75" width="38.5" height="58.5" rx="1.25" stroke="#F5C233" stroke-width="1.5"/>
+                        <path d="M11 29.25C10.5858 29.25 10.25 29.5858 10.25 30C10.25 30.4142 10.5858 30.75 11 30.75V29.25ZM29.5303 30.5303C29.8232 30.2374 29.8232 29.7626 29.5303 29.4697L24.7574 24.6967C24.4645 24.4038 23.9896 24.4038 23.6967 24.6967C23.4038 24.9896 23.4038 25.4645 23.6967 25.7574L27.9393 30L23.6967 34.2426C23.4038 34.5355 23.4038 35.0104 23.6967 35.3033C23.9896 35.5962 24.4645 35.5962 24.7574 35.3033L29.5303 30.5303ZM11 30.75H29V29.25H11V30.75Z" fill="#F5C233"/>
                     </svg>
                 </div>
             </div>
@@ -1813,14 +1751,9 @@
             <span class="footer-privacy__year">2023г. Все права защищены</span>
         </div>
     </footer>
-    <script
-    src="https://code.jquery.com/jquery-3.7.0.min.js"
-    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-    crossorigin="anonymous">
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/imask"></script>
     <script src="./assets/js/service-page.js"></script>
 </body>
 </html>
