--- a/contacts.html
+++ b/contacts.html
@@ -304,7 +304,7 @@
                         <span class="contacts__wrap__content__item__header__title color-black">Телефон</span>
                     </div>
                     <div class="contacts__wrap__content__item__descr color-grey">
-                        +7 495 333 66 99
+                        <a href="tel:+74953336699" class="contact-phone color-grey">+7 495 333 66 99</a>
                     </div>
                 </div>
                 <div class="contacts__wrap__content__item">
